add jvm param knowledge